# touchpad-enhance

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  config.h  flake.nix  main.cpp
control/: capabilities.cpp  capabilities.h  emulator.cpp  emulator.h  ipc.cpp  ipc.h  state.h  touchpad.cpp  touchpad.h
ctl/: main.cpp
install/: Uninstall.cmake.in  touchpad-enhance.service.in
nix/: module.nix  package.nix
